--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       var hmid = "1dfa88d0c8571eef2d383070cb3e5ca1";
       (function() { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?" + hmid; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();
     </script>
+    <!-- 腾讯防水墙 -->
+    <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
   </head>
   <body>
     <noscript>
