--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,16 @@
     </style>
     <script>
       var _hmt = _hmt || [];
-      var hmid = "bc38887aa5588add05a38704342ad7e8";
+      var hmid = "1dfa88d0c8571eef2d383070cb3e5ca1";
       (function() { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?" + hmid; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();
     </script>
+    <!-- 腾讯防水墙 -->
+    <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
   </head>
   <body>
     <noscript>
       <strong>
-        Sorry, D2Admin will not work properly without JavaScript support. Enable JavaScript for browsers and continue.
+        很抱歉，如果没有 JavaScript 支持，D2Admin 将不能正常工作。请启用浏览器的 JavaScript 然后继续。
       </strong>
     </noscript>
     <div id="app">
